# tlou-dance

./: .cc-template.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug.md  feat.md  spike.md
.github/workflows/: lint.yml
.gitlab/issue_templates/: bug.md  feat.md  spike.md
data/round-0/normalized/: .gitignore  ellie.fbx  joel.fbx  tess.fbx
data/round-0/raw/: INVENTORY.md
data/round-2/normalized/: .gitignore  INVENTORY.md
docs/: BACKLOG.md  DEVTREE.md
docs/0-游戏人物模型提取调研/: PLAN.md  PROMPT.md  SUMMARY.md
docs/0-游戏人物模型提取调研/assets/raw/: .gitignore  INVENTORY.md
docs/0-游戏人物模型提取调研/inspect-output/: ellie.txt  joel.txt  tess.txt
docs/0-游戏人物模型提取调研/inspect-output/post-mixamo/: ellie.txt  joel.txt  tess.txt
docs/0-游戏人物模型提取调研/scripts/: inspect_model.py
docs/1-动作捕捉调研/: PLAN.md  PROMPT.md  SUMMARY.md
docs/2-贴图集成进normalized-FBX/: PLAN.md  PROMPT.md  SUMMARY.md
scripts/blender/: merge_for_mixamo.py  wire_textures_into_normalized.py
scripts/round1_motion/: track_video.py
scripts/texture_wiring/: __init__.py  alias.py  part_assigner.py  texture_parser.py
src/round1_motion/: __init__.py  prepare_clip.py
tests/: conftest.py  test_alias.py  test_part_assigner.py  test_texture_parser.py
tests/round1_motion/: test_prepare_clip.py
